--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 <div class="container">
   <h3>Basic Navbar Example</h3>
   <p>A navigation bar is a navigation header that is placed at the top of the page.</p>
+  <p>testing git stuff...</p>
 </div>
 
 <div class="content" id="contents"></div>
