--- a/addFeed.html
+++ b/addFeed.html
@@ -35,7 +35,7 @@
 </nav>
   
 <div class="container">
-    <form action="/code/php/submitdata.php" method="post">
+    <form action="php/submitdata.php" method="post">
     Nickname:<br>
     <input type="text" name="Nickname""><br>
     IP Address:<br>
