--- a/addFeed.html
+++ b/addFeed.html
@@ -37,13 +37,15 @@
 <div class="container">
     <form action="php/submitdata.php" method="post">
     Nickname:<br>
-    <input type="text" name="Nickname""><br>
+    <input type="text" name="Nickname"><br>
     IP Address:<br>
-    <input type="text" name="IPaddress""><br>
+    <input type="text" name="IPaddress"><br>
     Username:<br>
-    <input type="text" name="username""><br>
+    <input type="text" name="username"><br>
     Password:<br>
-    <input type="text" name="password""><br><br>
+    <input type="text" name="password"><br>
+    Description:<br>
+    <input type="text" name="Description""><br><br>    
 
     <input type="submit" value="Submit">
 </div>
@@ -51,5 +53,5 @@
 <div class="content" id="contents"></div>
 
 </body>
-<script type="text/javascript" src="js/addCamera.js"></script>
+
 </html>
